<resources>
    <string name="app_name">SNKRZ</string>
    <string name="logo_snkrz">Logo_SNKRZ</string>
    <string name="email">Email</string>
    <string name="volver_a_login">Volver a Login</string>
    <string name="nombre">Nombre</string>
    <string name="contrasena">Contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="ya_tienes_cuenta">Ya tienes cuenta?</string>
    <string name="Login">LOGIN</string>
    <string name="registrarse_mayusculas">REGISTRARSE</string>
    <string name="no_tienes_cuenta">No tienes cuenta?</string>
    <string name="olvidaste_la_contrase_a">Olvidaste la contraseña?</string>
    <string name="registro">Registro</string>
    <string name="repite_la_contrase_a">Repite la contraseña</string>
    <string name="imagen_sneaker">Imagen Sneaker</string>
    <string name="fondo_decorativo">Fondo decorativo</string>
    <string name="precio">PRECIO</string>
    <string name="sneakers">SNEAKERS</string>
    <string name="grey_fog">\'GREY FOG\'</string>
    <string name="nike_dunk_lows">Nike Dunk Lows</string>
    <string name="lanzamiento">LANZAMIENTO</string>
    <string name="referencia">Referencia</string>
    <string name="las_nike_dunk_originales_nacieron_realmente_en_1985_y_fueron_dise_adas_por_peter_moore_las_zapatillas_inclu_an_una_novedad_distintiva_y_es_que_llegaron_en_una_amplia_variedad_de_colores_una_caracter_stica_que_acabar_a_marcando_la_identidad_de_la_silueta">Las Nike Dunk originales nacieron realmente en 1985 y fueron diseñadas por Peter Moore. Las zapatillas incluían una novedad distintiva, y es que llegaron en una amplia variedad de colores, una característica que acabaría marcando la identidad de la silueta.</string>
    <string name="imagen_perfil">Imagen perfil</string>
    <string name="rectangulo_decorativo_perfil">Rectangulo decorativo perfil</string>
    <string name="editar">Editar</string>
    <string name="apellido_usuario">Apellido Usuario</string>
    <string name="nombre_de_usuario">Nombre de Usuario</string>
    <string name="fechaEjemploSneaker">09/05/2023</string>
    <string name="descripcionImagenSneaker">Imagen Sneaker</string>
    <string name="cancelar">Cancelar</string>
    <string name="crear_sneaker">Crear Sneaker</string>
    <string name="guardar">Guardar</string>
    <string name="modelo_sneaker">Modelo Sneaker</string>
    <string name="nombre_sneaker">Nombre Sneaker</string>
    <string name="precio_sneaker">Precio Sneaker</string>
    <string name="c_digo_de_referencia">Código de Referencia</string>
    <string name="tel_fono">Teléfono</string>
    <string name="fecha_lanzamiento">Fecha Lanzamiento</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="cambiar_foto_de_perfil">Cambiar foto de perfil</string>
    <string name="apellido">Apellido</string>
    <string name="dni">DNI</string>
    <string name="descripci_n">Descripción</string>
    <string name="perfil">Perfil</string>
    <string name="inicio">Inicio</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="imagen_snkrz">Imagen Snkrz</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="imagen">Imagen</string>
    <string name="politicaPrivacidad">Política de Privacidad de SNKRZ Fecha de vigencia: [Fecha de entrada en vigencia] En SNKRZ, nos comprometemos a proteger la privacidad de nuestros usuarios y garantizar la seguridad de la información personal que nos proporcionan. Esta Política de Privacidad describe cómo recopilamos, usamos y protegemos la información personal que recopilamos a través de nuestro sitio web y aplicaciones móviles. Al utilizar nuestros servicios, aceptas los términos y condiciones establecidos en esta política. Información personal recopilada Recopilamos información personal de nuestros usuarios de varias formas, incluyendo, pero no limitado a: Información de contacto: Nombre, dirección de correo electrónico, número de teléfono, dirección postal. Información de registro: Nombre de usuario, contraseña. Información de pago: Detalles de tarjeta de crédito o débito, información de facturación. Información de perfil: Preferencias personales, tamaño de calzado, historial de compras. Uso de la información recopilada Utilizamos la información personal recopilada para los siguientes fines: Procesar y completar transacciones de compra. Personalizar y mejorar la experiencia del usuario. Enviar información relacionada con el pedido, como confirmaciones y actualizaciones de envío. Proporcionar servicio al cliente y soporte técnico. Enviar correos electrónicos promocionales y boletines informativos (con tu consentimiento expreso). Mejorar nuestros productos y servicios. Compartir información personal No vendemos, alquilamos ni compartimos información personal con terceros para sus propósitos de marketing sin tu consentimiento expreso. Sin embargo, podemos compartir información personal en las siguientes circunstancias: Proveedores de servicios: Trabajamos con terceros de confianza para proporcionar servicios como pagos, envío de productos y análisis de datos. Estos proveedores de servicios tienen acceso a la información personal necesaria para realizar sus funciones, pero no pueden utilizarla para otros fines. Cumplimiento legal: Podemos divulgar información personal si así lo exige la ley o si creemos de buena fe que dicha divulgación es necesaria para cumplir con un procedimiento legal o proteger los derechos, la propiedad o la seguridad de SNKRZ, sus usuarios u otros. Seguridad de la información Implementamos medidas de seguridad técnicas y organizativas adecuadas para proteger la información personal contra pérdida, uso indebido y acceso no autorizado. Sin embargo, ten en cuenta que ningún sistema de transmisión o almacenamiento de datos es completamente seguro. Opciones de privacidad y acceso a la información personal Puedes acceder, corregir o eliminar la información personal que nos has proporcionado en cualquier momento. Si deseas hacerlo, contáctanos utilizando los datos de contacto que se proporcionan al final de esta política. Cookies y tecnologías similares Utilizamos cookies y tecnologías similares para mejorar la funcionalidad y la experiencia del usuario en nuestro sitio web y aplicaciones móviles. Puedes ajustar la configuración de cookies en tu navegador web para administrar tus preferencias. Cambios en la Política de Privacidad Nos reservamos el derecho de modificar esta Política de Privacidad en cualquier momento. Cualquier cambio entrará en vigencia a partir de la fecha de publicación actualizada en nuestro sitio web.</string>
    <string name="politicaprivacidad">Politica Privacidad</string>
    <string name="a_adir_imagen">Añadir Imagen</string>
    <string name="eliminar">Eliminar</string>
    <string name="modificar">Modificar</string>
    <string name="tipoMoneda">€</string>
    <string name="_19_01_2023">19/01/2023</string>
    <string name="identificador">IDENTIFICADOR</string>
    <string name="dd1391_103">DD1391-103</string>
    <string name="gestionar_sneaker">Gestionar Sneaker</string>
    <string name="inicio_de_sesión">Inicio de sesión</string>
    <string name="recuperar_contrase_a">Recuperar Contraseña</string>
    <string name="crear_snkrz">Crear Snkrz</string>
    <string name="LoginTexto1">"El email y contraseña no pueden ser campos vacíos. "</string>
    <string name="LoginTexto2">Se ha producido un error autenticando al usuario. Comprueba que el email o la contraseña sean correctos.</string>
    <string name="fail">Failed!</string>
    <string name="RecuperarContrasena1">Contrasenya restaurada amb èxit. Rebràs un correu.</string>
    <string name="RecuperarContrasena2">Creación Exitosa</string>
    <string name="RecuperarContrasena3">No s\'ha pogut restaurar la contrasenya!!</string>
    <string name="RecuperarContrasena4">ERROR</string>
    <string name="Registro1">"La contraseña y la repeticion de contraseña debe ser la misma. "</string>
    <string name="Registro2">ERROR</string>
    <string name="Registro">"El email, la contraseña y la confirmacion de la contraseña, no pueden ser campos vacíos. "</string>
    <string name="Registro4">ERROR</string>
    <string name="Registro5">Se ha creado la cuenta con éxito!!!</string>
    <string name="Registro6">Creación Exitosa</string>
    <string name="Registro7">Se ha producido un error registrado al usuario</string>
    <string name="Registro8">ERROR</string>
    <string name="Registro9">El format de Contrasenya és invalid. La contrasenya ha de contenir entre 6 i 16 valors, una majuscula, una minuscula, un numero i un caracter que no sigui alfanumeric.</string>
    <string name="Registro10">ERROR</string>
    <string name="Registro11">El format del Email és invalid</string>
    <string name="Registro12">ERROR</string>
    <string name="Registro13">El Usuari no s\'ha afegit</string>
    <string name="Registro14">ERROR</string>
    <string name="CrearSneaker1">La sneaker no se ha guardado, contiene campos vacios!!!</string>
    <string name="CrearSneaker2">"La sneaker ya existe, elimina la Sneaker existente o cambia el código de referencia. "</string>
    <string name="CrearSneaker3">La sneaker se ha añadido correctamente</string>
    <string name="CrearSneaker4">La sneaker no se ha añadido correctamente</string>
    <string name="CrearSneaker5">Por favor, seleccione una imagen.</string>
    <string name="CrearSneaker6">Por favor, proporcione un código de referencia.</string>
    <string name="CrearSneaker7">Error al verificar la existencia de la sneaker</string>
    <string name="CrearSneaker8">No se ha seleccionado ninguna imagen</string>
    <string name="CrearSneaker9">Imagen subida correctamentae</string>
    <string name="CrearSneaker10">Error al subir la imagen</string>
    <string name="EditarPerfil1">No se ha podido modificar el perfil</string>
    <string name="EditarPerfil2">El formato del DNI es incorrecto</string>
    <string name="EditarPerfil3">El formato del teléfono es incorrecto</string>
    <string name="EditarPerfil5">El perfil se ha modificado correctamente</string>
    <string name="EditarPerfil6">El perfil no se ha modificado</string>
    <string name="EditarPerfil7">No se ha seleccionado ninguna imagen</string>
    <string name="EditarPerfil8">Imagen subida correctamente</string>
    <string name="EditarPerfil9">Error al subir la imagen</string>
    <string name="EditarPerfil10">La carrega de la imatge ha fallado o no existe imagen.</string>
    <string name="GestionarSneaker">La sneaker no se ha guardado, contiene campos vacios!!!</string>
    <string name="GestionarSneaker2">La sneaker s\'ha añadido correctamente</string>
    <string name="GestionarSneaker3">La sneaker no s\'ha añadido</string>
    <string name="GestionarSneaker4">Por favor, seleccione una imagen.</string>
    <string name="GestionarSneaker5">Por favor, proporcione un código de referencia.</string>
    <string name="GestionarSneaker6">No se ha seleccionado ninguna imagen</string>
    <string name="GestionarSneaker7">Imagen subida correctamente</string>
    <string name="GestionarSneaker8">Error al subir la imagen</string>
    <string name="GestionarSneaker9">La sneaker se ha eliminado correctamente</string>
    <string name="GestionarSneaker10">No se ha podido eliminar la sneaker</string>
    <string name="InformacionSneaker1">Me gusta eliminado</string>
    <string name="InformacionSneaker2">Error al eliminar el Me gusta</string>
    <string name="InformacionSneaker3">Me gusta agregado</string>
    <string name="InformacionSneaker4">Error al agregar el Me gusta</string>
    <string name="InformacionSneaker5">Error al obtener el número de Me gusta</string>
    <string name="PantallaPrincipalSneakerList1">Lanzamiento de Sneaker</string>
    <string name="Perfil1">La carrega del perfil ha fallado.</string>
    <string name="Perfil2">La carrega de la imatge ha fallado o no existe imagen.</string>
</resources>