<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#03051e"
    tools:context=".Activity.Login">

    <ImageView
        android:id="@+id/LogoSnkrLog"
        android:layout_width="@dimen/dimensinsLogo"
        android:layout_height="@dimen/dimensinsLogo"
        android:contentDescription="@string/logo_snkrz"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/srkrz" />

    <ImageView
        android:id="@+id/LogoSnkrTransparenteLog"
        android:layout_width="@dimen/dimensinsLogo"
        android:layout_height="@dimen/dimensinsLogo"
        android:layout_marginStart="@dimen/marginsStartLogo"
        android:contentDescription="@string/logo_snkrz"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/srkrz"
        app:tint="@color/blanco_transparente"/>

    <TextView
        android:id="@+id/Titulo_Login"
        style="@style/LabelEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginStartLabelRegLogRec"
        android:layout_marginTop="@dimen/marginTopLabelRegLogRec"
        android:text="@string/inicio_de_sesión"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginStartEditText"
        android:layout_marginTop="@dimen/marginTopEditText"
        android:layout_marginEnd="@dimen/marginEndEditText"
        android:hint="@string/email"
        android:textColorHint="@color/white"
        app:endIconMode="clear_text"
        app:endIconTint="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/LogoSnkrLog"
        app:startIconDrawable="@drawable/ic_round_person_24"
        app:startIconTint="@color/white"
        app:boxStrokeColor="@color/white"
        app:hintTextColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/LoginEmail"
            style="@style/EditTextBlancoLogReg"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginStartEditText"
        android:layout_marginTop="@dimen/marginTopEditText"
        android:layout_marginEnd="@dimen/marginEndEditText"
        android:hint="@string/contrasena"
        android:textColorHint="@color/white"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        app:startIconDrawable="@drawable/ic_round_lock_24"
        app:startIconTint="@color/white"
        app:boxStrokeColor="@color/white"
        app:hintTextColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/LoginPassword"
            style="@style/EditTextBlancoLogReg"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forgotten_password"
        style="@style/txtLestraBasica"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="38dp"
        android:text="@string/olvidaste_la_contrase_a"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/Login_button"
        style="@style/ButtonLogReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="52dp"
        android:text="@string/inicio_de_sesión"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotten_password"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textView"
        style="@style/txtLestraBasica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="26dp"
        android:text="@string/no_tienes_cuenta"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Login_button" />

    <TextView
        android:id="@+id/goSign"
        style="@style/SubLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="44dp"
        android:clickable="true"
        android:minHeight="48dp"
        android:text="@string/registrarse_mayusculas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/Login_button"
        tools:ignore="TextContrastCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>