<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blueforsneaker"
        tools:context=".Activity.Registro">

        <ImageView
            android:id="@+id/LogoSnkrReg"
            android:layout_width="@dimen/dimensinsLogo"
            android:layout_height="@dimen/dimensinsLogo"
            android:contentDescription="@string/logo_snkrz"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/srkrz" />

        <ImageView
            android:id="@+id/LogoSnkrTransparenteReg"
            android:layout_width="@dimen/dimensinsLogo"
            android:layout_height="@dimen/dimensinsLogo"
            android:layout_marginStart="@dimen/marginsStartLogo"
            android:contentDescription="@string/logo_snkrz"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/srkrz"
            app:tint="@color/blanco_transparente" />

        <TextView
            android:id="@+id/txtRegistro"
            style="@style/LabelEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registro"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout6"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginStartEditText"
            android:layout_marginTop="@dimen/marginTopEditText"
            android:layout_marginEnd="@dimen/marginEndEditText"
            android:hint="@string/nombre"
            android:textColorHint="@color/white"
            app:boxStrokeColor="@color/white"
            app:endIconMode="clear_text"
            app:endIconTint="@color/white"
            app:hintTextColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/txtRegistro"
            app:startIconDrawable="@drawable/ic_round_person_24"
            app:startIconTint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EditTextRegName"
                style="@style/EditTextBlancoLogReg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout3"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginStartEditText"
            android:layout_marginTop="@dimen/marginTopEditText"
            android:layout_marginEnd="@dimen/marginEndEditText"
            android:hint="@string/email"
            android:textColorHint="@color/white"
            app:boxStrokeColor="@color/white"
            app:endIconMode="clear_text"
            app:endIconTint="@color/white"
            app:hintTextColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout6"
            app:startIconDrawable="@drawable/ic_round_email_24"
            app:startIconTint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EditTextRegMail"
                style="@style/EditTextBlancoLogReg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout4"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginStartEditText"
            android:layout_marginTop="@dimen/marginTopEditText"
            android:layout_marginEnd="@dimen/marginEndEditText"
            android:hint="@string/contrasena"
            android:textColorHint="@color/white"
            app:boxStrokeColor="@color/white"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/white"
            app:hintTextColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
            app:startIconDrawable="@drawable/ic_round_lock_24"
            app:startIconTint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EditTextRegPassw"
                style="@style/EditTextBlancoLogReg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                tools:ignore="DuplicateSpeakableTextCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout5"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginStartEditText"
            android:layout_marginTop="@dimen/marginTopEditText"
            android:layout_marginEnd="@dimen/marginEndEditText"
            android:hint="@string/repite_la_contrase_a"
            android:textColorHint="@color/white"
            app:boxStrokeColor="@color/white"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/white"
            app:hintTextColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout4"
            app:startIconDrawable="@drawable/ic_round_lock_24"
            app:startIconTint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EditTextRegPasswRep"
                style="@style/EditTextBlancoLogReg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnRegistro"
            style="@style/ButtonLogReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registrarse"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout5" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="88dp"
            android:layout_marginTop="26dp"
            android:layout_marginBottom="28dp"
            android:text="@string/ya_tienes_cuenta"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnRegistro" />

        <TextView
            android:id="@+id/linkGoLog"
            style="@style/SubLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="90dp"
            android:clickable="true"
            android:minHeight="48dp"
            android:text="@string/Login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/btnRegistro"
            tools:ignore="TextContrastCheck" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>